# api-website

./: .gitignore  COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  app.py  batch_process_local_ocr.py  batch_process_mimo_vision.py  batch_process_ocr.py  batch_process_ocr_v2.py  chatgpt_auto_ocr_test.py  check_processing_status.py  convert_images_to_base64.py  copy_images_to_clipboard.py  fix_json_dates.py  pyproject.toml  quick_test_mimo.py  read_base64_sample.py  requirements.txt  revalidate_and_import.py  set_api_key.py  start_server.py  test_collect_all.py  test_local_ocr.py  test_mimo_vision.py  test_model_vision.py  test_with_api_key.py
.github/workflows/: collect-data.yml  deploy.yml
api/: health.json
api/metadata/: admin-division.json  oil-price.json  policy.json  price-table.json  traffic-restrict.json
api/v1/admin-division/: 20260524-162521.json
collectors/: __init__.py  base.py  oil_price.py  registry.py  traffic_restrict.py
config/: __init__.py  settings.yaml  sources.yaml
config/schemas/: admin_division.json  oil_price.json  policy.json  price_table.json  traffic_restrict.json
database/: oil_price_db.py
docs/: deployment.md  oil-price-image-usage.md  traffic-restrict-guide.md
processors/: __init__.py  cleaner.py  ocr_processor.py  pipeline.py  quality.py  validator.py
scripts/: generate_mock_data.py  run_collection.py  test_structure.py  test_traffic_restrict.py
web/: chatgpt-batch-helper.html  index.html  oil-price-dashboard.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
(+238 files in other folders)
